fix: object overlappin issue, Removed Mathrandom form getting positions for targets. Added Array to store screen position to not overlap objects

--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -467,6 +467,12 @@ li {
 /*-----mobile breakpoints-------*/
 @media only screen and (max-width: 500px) {
 
+    .target,
+    .bad {
+        width: 40px;
+        height: 40px;
+    }
+
     .speed,
     .score1,
     .score2,
